--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -117,7 +117,7 @@
                     <ul>
                         <li><a href='@controllers.admin.routes.Sites.siteList(1)'>小镇管理</a></li>
                         <li><a href='@controllers.admin.routes.Sites.postList(0,1)'>帖子管理</a></li>
-
+                        <li><a href='@controllers.admin.routes.Sites.postReplies(0,1)'>帖子评价管理</a></li>
                     </ul>
                 </li>
 
