--- a/app/views/sites/post.scala.html
+++ b/app/views/sites/post.scala.html
@@ -118,8 +118,7 @@ title =  "食美特，不一样的生活"
 
                 </div>
             </div>
-
-                <div class="site-others">
+            <div class="site-others">
                     <dl class="posts">
                         <dt>小镇动态</dt>
                         @for(post <- sitePosts){
@@ -133,6 +132,15 @@ title =  "食美特，不一样的生活"
                        }
                     </dl>
                 </div>
+           <!-- <div class="post-replies">
+
+                <dl class="replies clearfix">
+                    <dt><h3></h3></dt>
+                    <dd>
+
+                    </dd>
+                </dl>
+            </div>-->
         </div>
     </div>
 
