--- a/app/views/admin/sites/filterPostReplies.scala.html
+++ b/app/views/admin/sites/filterPostReplies.scala.html
@@ -1,4 +1,4 @@
-@(manager:models.admin.Manager,page:models.Page[models.site.Site],form: Form[controllers.admin.SiteFilterFormData]))
+@(manager:models.admin.Manager,page:models.Page[models.site.PostReply],form: Form[controllers.admin.PostReplyFilterFormData])))
 @views.html.admin.template(manager,"site") {
 
 
@@ -9,11 +9,10 @@
 <div id="breadcrumb">
     <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
     <a href="#" class="current">小镇管理</a>
-    <a href="#" class="current">小镇管理</a>
+    <a href="#" class="current">帖子管理</a>
 </div>
 
 <div class="container-fluid">
-
 
     <div class="row-fluid">
         <div class="span12">
@@ -22,38 +21,43 @@
         <span class="icon">
             <i class="icon-pencil"></i>
         </span>
-                    <h5>小镇筛选</h5>
+                    <h5>帖子回复筛选</h5>
                 </div>
                 <div class="widget-content nopadding">
-                    <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Sites.filterSites">
+                    <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Sites.filterPostReplies">
                         <input type="hidden" name="currentPage" id="J_currentPage" value='@form("currentPage").value'>
+
 
                         <div class="control-group">
                             <label class="control-label">创建者ID</label>
                             <div class="controls">
-                                <input type="text"  name="uid" value='@form("uid").value'  placeholder="创建者ID" >
+                                <input type="number"  name="uid" value='@form("uid").value'  placeholder="uid" >
                             </div>
                         </div>
 
                         <div class="control-group">
-                            <label class="control-label">分类</label>
+                            <label class="control-label">帖子ID</label>
+                            <div class="controls">
+                                <input type="number"  name="pid" value='@form("pid").value'  placeholder="pid" >
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label">帖子回复内容</label>
+                            <div class="controls">
+                                <input type="text"  name="content" value='@form("content").value'  placeholder="帖子reply content" >
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <label class="control-label">类型</label>
                             <div class="controls">
                                 <select name="cid" id="cid">
                                     <option value=""  @if(form("cid").value.getOrElse("none")=="none"){ selected="true" } >所有分类</option>
-                                    @for(cate<-models.site.SiteCate.values.toList.sortBy(x=>x.id)){
+                                    @for(cate<-models.site.PostCate.values.toList.sortBy(x=>x.id)){
                                     <option value="@cate.id" @if(form("cid").value.getOrElse("none")==cate.id.toString){ selected="true" }>@cate</option>
                                     }
                                 </select>
                             </div>
                         </div>
-
-                        <div class="control-group">
-                            <label class="control-label">小镇标题</label>
-                            <div class="controls">
-                                <input type="text"  name="title" value='@form("title").value'  placeholder="标签名称" >
-                            </div>
-                        </div>
-
                         <div class="control-group">
                             <label class="control-label" >状态</label>
                             <div class="controls">
@@ -72,7 +76,6 @@
 
                             </div>
                         </div>
-
                         <div class="control-group">
                             <label class="control-label" >时间</label>
                             <div class="controls">
@@ -97,15 +100,16 @@
             </div>
         </div>
     </div>
+
 <div class="row-fluid">
     <div class="well">
-        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchSites">
+        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchPostReplies">
             <input type="hidden" id="J_url" name="url" value="">
             <div class="controls">
                 <select id="J_select" name="action">
                     <option value="-1">批量动作</option>
-                    <option value="0">批量审核不通过</option>
                     <option value="1">批量审核通过</option>
+                    <option value="2">批量审核不通过</option>
                     <option value="3">批量删除</option>
                 </select>
 
@@ -117,13 +121,11 @@
                     <th><input type="checkbox"  name="title-table-checkbox" /></th>
                     <th>ID</th>
                     <th>创建者ID</th>
-                    <th>小镇名称</th>
-                    <th>小镇类型</th>
-                    <th>小镇logo</th>
-                    <th>小镇简介</th>
-                    <th>小镇公告</th>
-                    <th>小镇标签</th>
-                    <th>小镇状态</th>
+                    <th>帖子Id</th>
+                    <th>帖子回复类型</th>
+                    <th>回复内容</th>
+                    <th>引用</th>
+                    <th>状态</th>
                     <th>时间</th>
                     <th style="width: 60px;">操作</th>
                 </tr>
@@ -134,18 +136,14 @@
                     <td><input type="checkbox" name="ids[@i]" value="@item.id.get" /></td>
                     <td>@item.id</td>
                     <td><a href="@controllers.users.routes.Users.home(item.uid)"> @item.uid </a> </td>
-                    <td>@item.title</td>
-                    <td>@models.site.SiteCate(item.cid)</td>
-                    <td><img src="@item.pic" /></td>
-                    <td>@item.intro</td>
-                    <td>@item.notice</td>
-                    <td>@item.tags </td>
+                    <td><a href="@controllers.routes.Sites.post(item.pid)"> @item.pid </a> </td>
+                    <td>@models.site.PostReplyCate(item.cid)</td>
+                    <td>@item.content</td>
+                    <td>@item.quoteReply</td>
                     <td>@if(item.status==0){<span class="label label-warning">未审核</span>} @if(item.status ==1){<span class="label label-success">已审核</span>}</td>
                     <td>@item.addTime</td>
                     <td>
-                        <a href="#"><i class="icon-edit"></i></a>
-                        <!--    <a href="#J_deleteModal"class="remove" data-id="@item.id" role="button" data-toggle="modal"><i class="icon-trash"></i></a>  -->
-                        <a href=""><i class="icon-th-list"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
                     </td>
                 </tr>
                 }
@@ -159,19 +157,27 @@
 
             @page.prev.map { page =>
             <li class="prev">
-                <span  data-page="@page">Prev</span>
+                <a href="controllers.admin.routes.Sites.postReplies(page)">Prev</a>
+            </li>
+            }.getOrElse {
+            <li class="prev disabled">
+                <a>Prev</a>
             </li>
             }
             @for(num <-page.nums){
             @if(num==page.currentPage){
-            <li class="active"><span  data-page="@num">@num</span></li>
+            <li class="active"><a href="@controllers.admin.routes.Sites.postReplies(num)">@num</a></li>
             }else {
-            <li><span data-page="@num">@num</span></li>
+            <li><a href="@controllers.admin.routes.Sites.postReplies(num)">@num</a></li>
             }
             }
             @page.next.map { page =>
             <li class="next">
-                <span href="#" data-page="@page" >Next</span>
+                <a href="@controllers.admin.routes.Sites.postReplies(page)">Next</a>
+            </li>
+            }.getOrElse {
+            <li class="next disabled">
+                <a>Next</a>
             </li>
             }
 
