--- a/app/views/admin/sites/postReplies.scala.html
+++ b/app/views/admin/sites/postReplies.scala.html
@@ -1,4 +1,4 @@
-@(manager:models.admin.Manager,page:models.Page[models.site.Site])
+@(manager:models.admin.Manager,page:models.Page[models.site.PostReply])
 @views.html.admin.template(manager,"site") {
 
 
@@ -9,7 +9,7 @@
 <div id="breadcrumb">
     <a href="#" title="Go to Home" class="tip-bottom"><i class="icon-home"></i> Home</a>
     <a href="#" class="current">小镇管理</a>
-    <a href="#" class="current">小镇管理</a>
+    <a href="#" class="current">帖子管理</a>
 </div>
 
 <div class="container-fluid">
@@ -21,36 +21,42 @@
         <span class="icon">
             <i class="icon-pencil"></i>
         </span>
-                <h5>小镇筛选</h5>
+                <h5>帖子筛选</h5>
             </div>
             <div class="widget-content nopadding">
-                <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Sites.filterPosts">
+                <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Sites.filterPostReplies">
                     <input type="hidden" name="currentPage" id="J_currentPage" value="1">
+
 
                     <div class="control-group">
                         <label class="control-label">创建者ID</label>
                         <div class="controls">
-                            <input type="text"  name="uid" value=''  placeholder="创建者ID" >
+                            <input type="number"  name="uid" value=''  placeholder="uid" >
                         </div>
                     </div>
 
                     <div class="control-group">
-                        <label class="control-label">分类</label>
+                        <label class="control-label">帖子ID</label>
+                        <div class="controls">
+                            <input type="number"  name="pid" value=''  placeholder="pid" >
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">帖子回复内容</label>
+                        <div class="controls">
+                            <input type="text"  name="content" value=''  placeholder="帖子回复内容" >
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">回复类型</label>
                         <div class="controls">
                             <select name="cid" id="cid">
-                                <option value="">所有分类</option>
-                                @for(cate<-models.site.SiteCate.values.toList.sortBy(x=>x.id)){
+                                <option value="">所有类型</option>
+                                @for(cate<-models.site.PostReplyCate.values.toList.sortBy(x=>x.id)){
                                 <option value="@cate.id">@cate</option>
 
                                 }
                             </select>
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label">小镇标题</label>
-                        <div class="controls">
-                            <input type="text"  name="title" value=''  placeholder="标签名称" >
                         </div>
                     </div>
                     <div class="control-group">
@@ -100,13 +106,13 @@
 
 <div class="row-fluid">
     <div class="well">
-        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchSites">
+        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchPostReplies">
             <input type="hidden" id="J_url" name="url" value="">
             <div class="controls">
                 <select id="J_select" name="action">
                     <option value="-1">批量动作</option>
-                    <option value="0">批量审核不通过</option>
                     <option value="1">批量审核通过</option>
+                    <option value="2">批量审核不通过</option>
                     <option value="3">批量删除</option>
                 </select>
 
@@ -118,13 +124,11 @@
                     <th><input type="checkbox"  name="title-table-checkbox" /></th>
                     <th>ID</th>
                     <th>创建者ID</th>
-                    <th>小镇名称</th>
-                    <th>小镇类型</th>
-                    <th>小镇logo</th>
-                    <th>小镇简介</th>
-                    <th>小镇公告</th>
-                    <th>小镇标签</th>
-                    <th>小镇状态</th>
+                    <th>帖子Id</th>
+                    <th>帖子回复类型</th>
+                    <th>回复内容</th>
+                    <th>引用</th>
+                    <th>状态</th>
                     <th>时间</th>
                     <th style="width: 60px;">操作</th>
                 </tr>
@@ -135,18 +139,14 @@
                     <td><input type="checkbox" name="ids[@i]" value="@item.id.get" /></td>
                     <td>@item.id</td>
                     <td><a href="@controllers.users.routes.Users.home(item.uid)"> @item.uid </a> </td>
-                    <td>@item.title</td>
-                    <td>@models.site.SiteCate(item.cid)</td>
-                    <td><img src="@item.pic" /></td>
-                    <td>@item.intro</td>
-                    <td>@item.notice</td>
-                    <td>@item.tags </td>
+                    <td><a href="@controllers.routes.Sites.post(item.pid)"> @item.pid </a> </td>
+                    <td>@models.site.PostReplyCate(item.cid)</td>
+                    <td>@item.content</td>
+                    <td>@item.quoteReply</td>
                     <td>@if(item.status==0){<span class="label label-warning">未审核</span>} @if(item.status ==1){<span class="label label-success">已审核</span>}</td>
                     <td>@item.addTime</td>
                     <td>
-                       <!-- <a href="#"><i class="icon-edit"></i></a>-->
-                        <!--    <a href="#J_deleteModal"class="remove" data-id="@item.id" role="button" data-toggle="modal"><i class="icon-trash"></i></a>  -->
-                        <a href='@controllers.admin.routes.Sites.postList(item.id.get,1)'><i class="icon-th-list"></i></a>
+                        <a href="#"><i class="icon-trash"></i></a>
                     </td>
                 </tr>
                 }
@@ -160,7 +160,7 @@
 
             @page.prev.map { page =>
             <li class="prev">
-                <a href="controllers.admin.routes.Sites.siteList(page)">Prev</a>
+                <a href="controllers.admin.routes.Sites.postReplies(page)">Prev</a>
             </li>
             }.getOrElse {
             <li class="prev disabled">
@@ -169,14 +169,14 @@
             }
             @for(num <-page.nums){
             @if(num==page.currentPage){
-            <li class="active"><a href="@controllers.admin.routes.Sites.siteList(num)">@num</a></li>
+            <li class="active"><a href="@controllers.admin.routes.Sites.postReplies(num)">@num</a></li>
             }else {
-            <li><a href="@controllers.admin.routes.Sites.siteList(num)">@num</a></li>
+            <li><a href="@controllers.admin.routes.Sites.postReplies(num)">@num</a></li>
             }
             }
             @page.next.map { page =>
             <li class="next">
-                <a href="@controllers.admin.routes.Sites.siteList(page)">Next</a>
+                <a href="@controllers.admin.routes.Sites.postReplies(page)">Next</a>
             </li>
             }.getOrElse {
             <li class="next disabled">
