adjust favor of theme,topic,site

--- a/app/views/sites/post.scala.html
+++ b/app/views/sites/post.scala.html
@@ -114,7 +114,7 @@ title =  "食美特，不一样的生活"
                 <h3 class="site-title"><a href="@controllers.routes.Sites.site(post._3.id.get)"> @post._3.title</a></h3>
                 <div class="back-site"><a href="@controllers.routes.Sites.site(post._3.id.get)">返回小镇</a> </div>
                 <div class="follow clearfix">
-                    <a rel="followSite" href="javascript:;" class="follow-btn" data-title="@post._3.title" data-sid="@post._3.id"> + 加入小镇</a>
+                    <a rel="followSite" href="javascript:;" class="follow-btn" data-title="@post._3.title" data-id="@post._3.id"> + 加入小镇</a>
 
                 </div>
             </div>
