--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -27,7 +27,7 @@ title =  "食美特，不一样的生活"
            <div class="join">
 
                <div class="follow">
-                   <a rel="followSite" href="javascript:;" class="follow-btn" data-title="@site.title" data-sid="@site.id"> + 加入小镇</a>
+                   <a rel="followSite" href="javascript:;" class="follow-btn" data-title="@site.title" data-id="@site.id"> + 加入小镇</a>
 
                    <span class="member-num">&nbsp;&nbsp;<em id="J_siteMember">@site.memberNum</em>&nbsp;居民</span>
 
