--- a/app/views/pages/themeList.scala.html
+++ b/app/views/pages/themeList.scala.html
@@ -73,7 +73,7 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
                 </h3>
 
                 <div class="info">@themeIntro</div>
-                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-title="@themeName" data-id="@themeId">+ 关注</a>
 					<span class="mete pl15">
 
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
