--- a/app/views/pages/themes.scala.html
+++ b/app/views/pages/themes.scala.html
@@ -82,7 +82,7 @@ title = " 美食街_食美特，爱美食爱生活"
             </h3>
 
             <div class="info" >@themeIntro</div>
-            <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+            <a rel="followTheme" href="javascript:;" data-type="0" class="follow" data-title="@themeName" data-id="@themeId">+ 关注</a>
 					<span class="mete pl15">
 
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
@@ -117,7 +117,7 @@ title = " 美食街_食美特，爱美食爱生活"
                 </h3>
 
                 <div class="info" >@themeIntro</div>
-                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+                <a rel="followTheme" href="javascript:;" data-type="0" class="follow" data-title="@themeName" data-id="@themeId">+ 关注</a>
 					<span class="mete pl15">
 
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
@@ -152,7 +152,7 @@ title = " 美食街_食美特，爱美食爱生活"
                 </h3>
 
                 <div class="info" >@themeIntro</div>
-                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-themeid="@themeId">+ 关注</a>
+                <a rel="followTheme" href="javascript:;" class="follow" data-type="0" data-title="@themeName" data-id="@themeId">+ 关注</a>
 					<span class="mete pl15">
 
                         <em class="J_LikeCount">@themeLoveNum</em> 人关注
