adjust favor for goods and delete smeite.favor in smeite.js

--- a/app/views/baobei/getComments.scala.html
+++ b/app/views/baobei/getComments.scala.html
@@ -2,7 +2,7 @@
 
 <div id="J_ShowResult">
     @for((user,assess)<-page.items){
-    <div class="cmt clearfix cmt-noworth" data-cmtid="@assess.id" data-proid="@assess.goodsId">
+    <div class="cmt clearfix cmt-noworth" data-cmtid="@assess.id" data-id="@assess.goodsId">
         <div class="user-pic">
             <img src="@user.pic" alt="@user.name" width="80" height="80" />
         </div>
