--- a/app/views/pages/faxian.scala.html
+++ b/app/views/pages/faxian.scala.html
@@ -43,7 +43,7 @@ title =  "发现喜欢_食美特，爱美食爱生活"
                      <div class="price">
                          <span>￥@goods.price</span>
                          <div class="like-state">
-                             <a rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get">
+                             <a rel="followGoods" href="javascript:void(0)" data-id="@goods.id.get">
                                  <i class="ico-likes"  title="喜欢"></i>
                              </a>
                              <div class="like-num">
