--- a/app/views/themes/view.scala.html
+++ b/app/views/themes/view.scala.html
@@ -75,7 +75,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
                 <div class="price">
                     <span>￥@goods.price</span>
                     <div class="like-state">
-                        <a rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get">
+                        <a rel="followGoods" href="javascript:void(0)" data-id="@goods.id.get">
                             <i class="ico-likes"  title="喜欢"></i>
                         </a>
                         <div class="like-num">
@@ -124,7 +124,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
             </form>
        </div>
 
-           <!-- <div class="cmt clearfix cmt-noworth" data-cmtid="1" data-proid="23">
+           <!-- <div class="cmt clearfix cmt-noworth" data-cmtid="1" data-id="23">
                 <div class="user-pic">
                     <img src="/images/user/1363011053560.jpg" alt="怡然" width="50" height="50">
                 </div>
