--- a/app/views/users/appraisal.scala.html
+++ b/app/views/users/appraisal.scala.html
@@ -76,7 +76,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                         <div class="news-text">
                             <p> <a href="@controllers.routes.Baobei.view(goods.id.get)" target="_blank">@goods.name</a></p>
 
-                            <a class="jd-btn sbl-btn J_InviteFellowJudge" href="javascript:;" data-proid="@goods.id">求鉴定</a>
+                            <a class="jd-btn sbl-btn J_InviteFellowJudge" href="javascript:;" data-id="@goods.id">求鉴定</a>
                         </div>
                     </li>
                     }
