--- a/app/views/users/home.scala.html
+++ b/app/views/users/home.scala.html
@@ -58,7 +58,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     <div class="price">
                         <span>￥@goods.price</span>
                         <div class="like-state">
-                            <a rel="followGoods" href="javascript:void(0)" data-proid="@goods.id.get">
+                            <a rel="followGoods" href="javascript:void(0)" data-title="@goods.name" data-id="@goods.id.get">
                                 <i class="ico-likes"  title="喜欢"></i>
                             </a>
                             <div class="like-num">
@@ -131,7 +131,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                     <span>@item._1._4 人关注</span>
                 </div>
               <!--  @if(!user.isEmpty && user.get.id==author.id){
-                <a class="ilike-del" href="javascript:;" data-type="my" data-proid="@item._1._1">删除</a>
+                <a class="ilike-del" href="javascript:;" data-type="0" data-title="@item._1._4" data-id="@item._1._1">删除</a>
                 }-->
             </div>
             }
