--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -5,7 +5,9 @@
  * Time: 下午7:24
  * 维护：zuosanshao@qq.com
 */
-
+#J_Page {
+    background-color: #F9F9EF;
+}
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td {
     margin: 0;
     padding: 0
@@ -42,7 +44,7 @@ a {
     color: #333;
 }
 a:hover{
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .black:link, .black:visited {
