--- a/app/views/sites/post.scala.html
+++ b/app/views/sites/post.scala.html
@@ -135,38 +135,54 @@ title =  "食美特，不一样的生活"
                          <ul id="J_commentList">
                              <li >
                                  <div class="share-avt">
-                                     <a class="fl" href="/user/42076 target=" _blank""=""><img class="avt32 fl" src="http://img1.xiangqu.com/xiangqu/image/9F5/9F50B171AD530BB705AC289A7A9024F6_332x334.jpg_32x10000.jpg" width="38" height="38"></a>
+                                     <a class="fl" href="/user/42076"target="_blank">
+                                         <img class="avt32 fl" src="http://img1.xiangqu.com/xiangqu/image/9F5/9F50B171AD530BB705AC289A7A9024F6_332x334.jpg_32x10000.jpg" width="38" height="38">
+                                     </a>
                                  </div>
                                  <span class="arrow"></span>
                                  <div class="share-user">
-                                     <h3><a class="J_nick" href="/user/42076" target="_blank">smeite</a><p class="user-title"></p></h3>
-                                     <p class="content">好茶</p>
-                                     <div class="pic" style="" flag="1"><a href="javascript:;"><img bigimg="http://img1.xiangqu.com/xiangqu/image/836/836D2A5369A229EC5CE46C6FACC62CA0_640x360.jpg_450x10000.jpg" smallimg="http://img1.xiangqu.com/xiangqu/image/836/836D2A5369A229EC5CE46C6FACC62CA0_640x360.jpg_120x10000.jpg" src="http://img1.xiangqu.com/xiangqu/image/836/836D2A5369A229EC5CE46C6FACC62CA0_640x360.jpg_120x10000.jpg" style="opacity: 0.9;"></a></div>
-                                     <div class="item-doing"><a class="reply" value="" userid="" href="javascript:;" style="display: none;">回复</a>刚刚</div>
+                                     <h3>
+                                         <a class="J_userNick" href="/user/42076" target="_blank">smeite</a>
+                                         <p class="user-title"></p>
+                                     </h3>
+                                     <p class="content J_commentCon">好茶</p>
+                                     <div class="pic" style="display: none">
+
+                                     </div>
+                                     <div class="item-doing">
+                                         <a class="reply J_postReply"  href="javascript:;">回复</a><span class="time">2013-08-13</span>
+                                     </div>
                                  </div>
                              </li>
                          </ul>
+                         <form action="/post/reply" method="post" id="J_postComment">
+                             <input type="hidden" name="pid" value="@post._1.id.get">
+                             <input type="hidden" name="quoteContent" id="J_quoteContent">
                          <ul>
+                             <li id="J_postQuote" class="post-quote">
+
+                             </li>
                              <li class="post-c">
-                                 <div class="share-avt"><a href="/user/42076" target="_blank"><img class="avt32 fl" value="42076" src="http://img1.xiangqu.com/xiangqu/image/9F5/9F50B171AD530BB705AC289A7A9024F6_332x334.jpg_64x10000.jpg" width="38" height="38" style="opacity: 1;"> </a></div>                                     <span class="arrow"></span>
+                                 <div class="share-avt">
+                                     <a href="/user/42076" target="_blank">
+                                     <img class="avt32 fl" value="42076" src="http://img1.xiangqu.com/xiangqu/image/9F5/9F50B171AD530BB705AC289A7A9024F6_332x334.jpg_64x10000.jpg" width="38" height="38" >
+                                 </a>
+                                 </div>
+                                 <span class="arrow"></span>
                                  <div class="share-user">
 
                                      <div class="post">
-                                         <div><textarea id="J_commentText" name="" cols="" rows="" class="textarea-normal w-660" label="说两句吧" style="color: rgb(0, 0, 0);"></textarea></div>
-
-                                         <div id="upload_img_div" class="upload-img" style="display: none;">
-                                             <div class="img"><img id="upload_img" src="">
-                                                 <p class="del"><a href="javascript:;">删除</a></p></div>
-                                         </div>
+                                         <div><textarea id="J_commentText"   label="说两句吧" ></textarea></div>
 
                                          <div class="btn-post clearfix">
-                                             <a class="btn btn-gray fr" href="javascript:;">发布</a>
+                                             <input type="submit" id="J_postCommentSubmit" class="bbl-btn  fr" value="发布">
 
                                          </div>
                                      </div>
 
                                  </div></li>
                          </ul>
+                             </form>
                      </div>
                  </div>
 
@@ -197,15 +213,7 @@ title =  "食美特，不一样的生活"
                        }
                     </dl>
                 </div>
-           <!-- <div class="post-replies">
 
-                <dl class="replies clearfix">
-                    <dt><h3></h3></dt>
-                    <dd>
-
-                    </dd>
-                </dl>
-            </div>-->
         </div>
     </div>
 
@@ -216,6 +224,6 @@ title =  "食美特，不一样的生活"
 }{
 
 <script type="text/javascript">
-    seajs.use['smeite/site/post','smeite/site/favor','smeite/user/favor']
+    seajs.use(['smeite/site/post','smeite/site/favor','smeite/user/favor'])
 </script>
 }
