adjust cookbook.scala.html

--- a/app/views/pages/cookbook.scala.html
+++ b/app/views/pages/cookbook.scala.html
@@ -35,23 +35,19 @@ title =  "食美特，不一样的生活"
             <div class="bulletin-tips">
 
                 <div class="tag-wrap clearfix">
-
-                    <a href="" target="_blank" class="special">早餐</a>
-                    <a href="" target="_blank">午餐</a>
-                    <a href="" target="_blank" class="special">晚餐</a>
-                    <a href="" target="_blank">下午茶</a>
-                    <a href="" target="_blank">孕妇</a>
-                    <a href="" target="_blank">产妇</a>
-                    <a href="" target="_blank" class="special">宝宝</a>
-                    <a href="" target="_blank">上班族</a>
-                    <a href="" target="_blank">美容</a>
-                    <a href="" target="_blank">减肥</a>
-                    <a href="" target="_blank">延缓衰老</a>
-                    <a href="" target="_blank">清热解毒</a>
-                    <a href="" target="_blank">肢寒畏冷</a>
-                    <a href="" target="_blank">益智补脑</a>
-                    <a href="" target="_blank">补虚养身</a>
+                    <a href='@controllers.routes.Search.search("早餐")' target="_blank" class="special">早餐</a>
+                    <a href='@controllers.routes.Search.search("午餐")' target="_blank">午餐</a>
+                    <a href='@controllers.routes.Search.search("晚餐")' target="_blank" class="special">晚餐</a>
+                    <a href='@controllers.routes.Search.search("孕妇")' target="_blank">孕妇</a>
+                    <a href='@controllers.routes.Search.search("产妇")' target="_blank">产妇</a>
+                    <a href='@controllers.routes.Search.search("宝宝")' target="_blank" class="special">宝宝</a>
+                    <a href='@controllers.routes.Search.search("上班族")' target="_blank">上班族</a>
+                    <a href='@controllers.routes.Search.search("清热去火")' target="_blank">清热去火</a>
+                    <a href='@controllers.routes.Search.search("美容养颜")' target="_blank">美容养颜</a>
+                    <a href='@controllers.routes.Search.search("养胃补脾")' target="_blank">养胃补脾</a>
                 </div>
+                <p><a class="create-cookbook" href="/post/edit?sid=5">发布私房菜</a> </p>
+                <p class="tips"> 优质菜谱，赠送食豆100粒哦 </p>
             </div>
 
 
