--- a/app/views/pages/siteList.scala.html
+++ b/app/views/pages/siteList.scala.html
@@ -36,7 +36,7 @@ title =  "食美特，爱美食爱生活"
                 <h3 class="mt15 mb10">阳光、蓝天……</h3>
                 <h3 class="mb15">用汗水浇灌生活的乐土</h3>
                 <p class="edit mb10">{ 我是镇长 }</p>
-                <p><a class="create-theme" href="/site/edit"> 申请小镇</a> </p>
+                <p><a class="create-site" href="/site/edit"> 申请小镇</a> </p>
                 <p class="tips"> 优质小镇，赠送食豆100粒哦 </p>
             </div>
 
